spacing fix

--- a/material-overrides/assets/stylesheets/polkadot.css
+++ b/material-overrides/assets/stylesheets/polkadot.css
@@ -363,7 +363,6 @@
   background-color: var(--color-surface-secondary);
   border-radius: var(--rounded-lg);
   padding: calc((44px - 0.8rem) / 2);
-  margin: .2rem 0;
   width: 44px;
   height: 44px;
 }
@@ -438,6 +437,11 @@ input.md-search__input::placeholder {
 }
 
 @media screen and (min-width: 60em) {
+  .md-header__option[data-md-component="palette"] .md-icon,
+  .md-header__tools {
+    margin: 0.2rem 0;
+  }
+
   .md-search__form {
     background-color: var(--color-surface-secondary);
     border-radius: var(--rounded-lg);
